mobile header style fixed

--- a/index.html
+++ b/index.html
@@ -42,30 +42,14 @@
         <ul class="navbar__ul">
             <li class="navbar__li"><img src="images/mobile/yellow-arrow.svg"><a href="#">Формат обучения</a></li>
             <li class="navbar__li"><img src="images/mobile/yellow-arrow.svg"><a href="#">Стоимость</a></li>
-            <li class="navbar__li"><img src="images/mobile/yellow-arrow.svg"><a href="#">Преподаватели</a></li>
-            <li class="navbar__li"><img src="images/mobile/yellow-arrow.svg"><a href="#">Отзывы</a></li>
+            <li class="navbar__li"><img src="images/mobile/yellow-arrow.svg"><a href="#teachers-hook">Преподаватели</a></li>
+            <li class="navbar__li"><img src="images/mobile/yellow-arrow.svg"><a href="#reviews-hook">Отзывы</a></li>
         </ul>
     </div>
-    <div class="navbar__el">
-        <button onclick="showHideNavList(this)" class="navbar__link">ОГЭ</button>
-        <ul class="navbar__ul">
-            <li class="navbar__li"><img src="images/mobile/yellow-arrow.svg"><a href="#">Формат обучения</a></li>
-            <li class="navbar__li"><img src="images/mobile/yellow-arrow.svg"><a href="#">Стоимость</a></li>
-            <li class="navbar__li"><img src="images/mobile/yellow-arrow.svg"><a href="#">Преподаватели</a></li>
-            <li class="navbar__li"><img src="images/mobile/yellow-arrow.svg"><a href="#">Отзывы</a></li>
-        </ul>
-    </div>
-    <div class="navbar__el">
-        <button onclick="showHideNavList(this)" class="navbar__link">10 класс</button>
-        <ul class="navbar__ul">
-            <li class="navbar__li"><img src="images/mobile/yellow-arrow.svg"><a href="#">Формат обучения</a></li>
-            <li class="navbar__li"><img src="images/mobile/yellow-arrow.svg"><a href="#">Стоимость</a></li>
-            <li class="navbar__li"><img src="images/mobile/yellow-arrow.svg"><a href="#">Преподаватели</a></li>
-            <li class="navbar__li"><img src="images/mobile/yellow-arrow.svg"><a href="#">Отзывы</a></li>
-        </ul>
-    </div>
-    <a href="#" class="navbar__link" style="padding: 16px 0 24px">Преподаватели</a>
-    <a href="#" class="navbar__link">Отзывы</a>
+    <a href="#" class="navbar__link">ОГЭ</a>
+    <a href="#" class="navbar__link">10 класс</a>
+    <a href="#teachers-hook" class="navbar__link" style="padding: 16px 0 24px">Преподаватели</a>
+    <a href="#reviews-hook" class="navbar__link">Отзывы</a>
     <button class="recruit__button menu-mobile__button">Бесплатное занятие</button>
     <a href="tel: +79923466545" class="menu-mobile__tel">+7 992 346-65-45</a>
     <div style="font-weight: 400;font-size: 14px;line-height: 10px;">на связи 9–21:00</div>
