mobile header menu style fixed

--- a/index.html
+++ b/index.html
@@ -42,12 +42,17 @@
         <ul class="navbar__ul">
             <li class="navbar__li"><img src="images/mobile/yellow-arrow.svg"><a href="#">Формат обучения</a></li>
             <li class="navbar__li"><img src="images/mobile/yellow-arrow.svg"><a href="#">Стоимость</a></li>
-            <li class="navbar__li"><img src="images/mobile/yellow-arrow.svg"><a href="#teachers-hook">Преподаватели</a></li>
+            <li class="navbar__li"><img src="images/mobile/yellow-arrow.svg"><a href="#teachers-hook">Преподаватели</a>
+            </li>
             <li class="navbar__li"><img src="images/mobile/yellow-arrow.svg"><a href="#reviews-hook">Отзывы</a></li>
         </ul>
     </div>
-    <a href="#" class="navbar__link">ОГЭ</a>
-    <a href="#" class="navbar__link">10 класс</a>
+    <div class="navbar__el">
+        <a href="#" class="navbar__link">ОГЭ</a>
+    </div>
+    <div class="navbar__el">
+        <a href="#" class="navbar__link">10 класс</a>
+    </div>
     <a href="#teachers-hook" class="navbar__link" style="padding: 16px 0 24px">Преподаватели</a>
     <a href="#reviews-hook" class="navbar__link">Отзывы</a>
     <button class="recruit__button menu-mobile__button">Бесплатное занятие</button>
