close menu on FL-click

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <form class="modal-w__form">
                 <input id="modal-w-fl-name" class="questions__name" type="text" placeholder="Имя"/>
                 <input id="modal-w-fl-tel" class="questions__tel" type="tel" value="+7" maxlength="17"/>
-                <button id="modal-w-fl-btn" class="questions__button" type="button">Запросить</button>
+                <button id="modal-w-fl-btn" class="questions__button" type="button">Оставить заявку</button>
             </form>
         </div>
     </div>
