fix closing city select

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="modal-w__content">
             <div class="modal-w__title-wrapper">
                 <div class="modal-w__title">Выберите город</div>
-                <img onclick="document.querySelector('.modal-w__wrapper').style.display = 'none';"
+                <img onclick="document.getElementById('modal-w__city').style.display = 'none';"
                      class="modal-w__cross"
                      src="images/mobile/cross.svg"/>
             </div>
