add price-calculator to html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script defer src="scripts/yMap.js"></script>
     <script defer src="scripts/validation.js"></script>
     <script defer src="scripts/scripts.js"></script>
+    <script defer src="scripts/price-calculator.js"></script>
 </head>
 <body>
 <div class="menu-mobile">
