fix price subjects

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
         <div class="price__columns">
             <div class="price__column">
                 <div class="price__column__title">1. Выберите предметы:</div>
-                <div style="display: flex">
+                <div style="display: flex;">
                     <div class="price__margin">
                         <div class="price__subject">
                             <input type="checkbox" class="price__subject__checkbox" id="input-math">
